[package]
edition = "2021"
name = "json-example"
version = "0.1.0"

[dependencies]
json-core = {path = "core"}
json-methods = {path = "methods"}
risc0-groth16 = {path = "../../risc0/groth16", features = ["prove"]}
risc0-zkvm = {path = "../../risc0/zkvm",features = ["prove"]}
serde = "1.0"
[features]
cuda = ["risc0-zkvm/cuda"]
default = ["risc0-zkvm/disable-dev-mode"]
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
